# sing-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-12-fix-windows-subprocess-output-decoding/: task.json
.trellis/tasks/05-12-use-local-timezone-in-sing-list/: task.json
.trellis/tasks/05-13-optimize-python-code/: task.json
.trellis/tasks/archive/2026-05/00-bootstrap-guidelines/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-12-fix-restart-active-config/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-12-fix-windows-service-start-timeout/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-12-fix-windows-subprocess-output-decoding/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-12-improve-tests/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-12-readme-install-uv-tool/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-12-readme-install-uv-tool/research/: uv-tool-commands.md
.trellis/tasks/archive/2026-05/05-12-use-local-timezone-in-sing-list/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-12-windows-sing-box-cli/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-13-optimize-python-code/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/pixelcola/: index.md  journal-1.md
src/sing_cli/: __init__.py  cli.py  errors.py  profile.py  service.py  state.py
tests/: test_cli.py  test_profile.py  test_service.py  test_state.py
