[project]
name = "sing-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "pixelcola", email = "swakpo@outlook.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sing-cli = "sing_cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.15.12"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["B904", "E501", "B008", "C901", "W191"]
