[project]
name = "sing-cli"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "pixelcola", email = "swakpo@outlook.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sing-cli = "sing_cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[dependency-groups]
dev = ["ruff>=0.15.12", "ty>=0.0.35"]

[tool.ruff]
line-length = 120
target-version = "py313"
include = ["src/**/*.py", "src/**/*.pyi"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["B904", "E501", "B008", "C901", "W191"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]
